--- a/aira/templates/aira/agrifield_update.html
+++ b/aira/templates/aira/agrifield_update.html
@@ -94,10 +94,6 @@
 
 {% block extrajs %}
             <script>
-              function make_coords(coord) {
-                  return parseFloat(coord.replace(",","."));
-                };
-
                 map = new OpenLayers.Map('on_clink_map',
                       {units: 'm',
                        displayProjection: 'EPSG:4326',
@@ -140,7 +136,7 @@
                 map.addLayer(kml);
 
                 //alert(parseFloat("{{ object.longitude }}".replace(",",".")));
-                var fieldloc = new OpenLayers.LonLat(make_coords("{{ object.location.x }}"),make_coords("{{ object.location.y }}")).transform('EPSG:4326', 'EPSG:3857');
+                var fieldloc = new OpenLayers.LonLat({{ object.location.x }}, {{ object.location.y }}).transform("EPSG:4326", "EPSG:3857")
                 var marker = new OpenLayers.Marker(fieldloc)
                 var markers = new OpenLayers.Layer.Markers( "{{ object.name }}" );
                 map.addLayer(markers);
